--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,20 +4,7 @@
   "overrides": [
     {
       "files": ["*.md"],
-      "plugins": ["markdown"],
-      "globals": {"Maybe": false, "show": false},
-      "rules": {
-        "func-call-spacing": ["error", "always", {"allowNewlines": true}],
-        "strict": ["off"]
-      }
-    },
-    {
-      "files": ["test/**/*.js"],
-      "rules": {
-        "comma-dangle": ["error", "always-multiline"],
-        "func-call-spacing": ["error", "always", {"allowNewlines": true}],
-        "func-style": ["error", "declaration", {"allowArrowFunctions": true}]
-      }
+      "globals": {"Maybe": false, "show": false}
     }
   ]
 }
