--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "sanctuary-scripts": "4.0.x"
+    "sanctuary-scripts": "5.0.x"
   },
   "scripts": {
     "doctest": "sanctuary-doctest",
     "lint": "sanctuary-lint",
     "release": "sanctuary-release",
     "test": "npm run lint && sanctuary-test && npm run doctest"
+  },
+  "mocha": {
+    "ui": "tdd"
   }
 }
