--- a/.config
+++ b/.config
@@ -1,5 +1,5 @@
 repo-owner = sanctuary-js
 repo-name = sanctuary-show
-default-branch = main
 contributing-file = .github/CONTRIBUTING.md
 heading-level = 3
+module-type = commonjs
